@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4HepRepFileViewer.hh,v 1.3 2002-01-29 01:25:06 perl Exp $
+// $Id: G4HepRepFileViewer.hh,v 1.4 2002-01-29 21:03:47 perl Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -49,7 +49,7 @@ public:
 private:
   HepRepXMLWriter *hepRepXMLWriter;
   int fileCounter;
-  bool isOpen;
+  void OpenHepRep();
 };
 
 #endif
