@@ -1,4 +1,4 @@
-$Id: History,v 1.11 2002-01-29 01:24:57 perl Exp $
+$Id: History,v 1.12 2002-01-29 21:03:35 perl Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -19,6 +19,10 @@ committal in the CVS repository !
 
 History file for visualization/HepRep sub-category
 ---------------------------------------------------------------------------
+
+29th January 2002  Joseph Perl
+- Relocate file-opening logic to constructor and ShowView
+  (had been in SetView).
 
 28th January 2002  Joseph Perl
 - Produce hierarchical output rather than flat HepRepType structure.
